--- a/example/chat/package.json
+++ b/example/chat/package.json
@@ -14,8 +14,9 @@
     "react": "^16.6.3",
     "react-apollo": "^2.3.1",
     "react-dom": "^16.6.3",
-    "react-scripts": "^2.1.1",
-    "subscriptions-transport-ws": "^0.9.5"
+    "react-scripts": "^3.2.0",
+    "subscriptions-transport-ws": "^0.9.5",
+    "ts-pnp": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
